{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 337,
  "lineage": "afafc1f7-2d9b-8a99-f568-10f1a5479163",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "cluster_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:497140136649:loadbalancer/app/dev-ecs-webpage-cluster-alb/93bc54713a02b86d",
            "arn_suffix": "app/dev-ecs-webpage-cluster-alb/93bc54713a02b86d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-ecs-webpage-cluster-alb-1746160448.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:497140136649:loadbalancer/app/dev-ecs-webpage-cluster-alb/93bc54713a02b86d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-ecs-webpage-cluster-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00fef1f80040be27e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0075078aa576aee5b"
              },
              {
                "subnet_id": "subnet-06a7b3fb664b6b322"
              }
            ],
            "subnets": [
              "subnet-0075078aa576aee5b",
              "subnet-06a7b3fb664b6b322"
            ],
            "tags": {
              "Application": "dev-ecs-webpage",
              "business_divsion": "wenorg",
              "environment": "dev",
              "service": "ecs"
            },
            "vpc_id": "vpc-01138f8d20d65d8ec",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "existing_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:497140136649:loadbalancer/app/dev-ecs-webpage-cluster-alb/93bc54713a02b86d",
            "arn_suffix": "app/dev-ecs-webpage-cluster-alb/93bc54713a02b86d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-ecs-webpage-cluster-alb-1746160448.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:497140136649:loadbalancer/app/dev-ecs-webpage-cluster-alb/93bc54713a02b86d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-ecs-webpage-cluster-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00fef1f80040be27e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0075078aa576aee5b"
              },
              {
                "subnet_id": "subnet-06a7b3fb664b6b322"
              }
            ],
            "subnets": [
              "subnet-0075078aa576aee5b",
              "subnet-06a7b3fb664b6b322"
            ],
            "tags": {
              "Application": "dev-ecs-webpage",
              "business_divsion": "wenorg",
              "environment": "dev",
              "service": "ecs"
            },
            "vpc_id": "vpc-01138f8d20d65d8ec",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "existing_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:497140136649:targetgroup/dev-ecs-ecs-frgt-TG/898071e64edd8b96",
            "arn_suffix": "targetgroup/dev-ecs-ecs-frgt-TG/898071e64edd8b96",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 90,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:497140136649:targetgroup/dev-ecs-ecs-frgt-TG/898071e64edd8b96",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-1:497140136649:loadbalancer/app/dev-ecs-webpage-cluster-alb/93bc54713a02b86d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-ecs-ecs-frgt-TG",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "business_divsion": "wenorg",
              "environment": "dev",
              "service": "ecs"
            },
            "target_type": "ip",
            "vpc_id": "vpc-01138f8d20d65d8ec"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:497140136649:subnet/subnet-0a84fbee681fc739b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Name:wenorg-dev-public_subnet-1",
                  "wenorg-dev-private_subnet-0"
                ]
              }
            ],
            "id": "subnet-0a84fbee681fc739b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "497140136649",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "wenorg-dev-private_subnet-0",
              "business_divsion": "wenorg",
              "environment": "dev",
              "service": "ecs"
            },
            "vpc_id": "vpc-01138f8d20d65d8ec"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:497140136649:vpc/vpc-01138f8d20d65d8ec",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0161a2d8046a6c116",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-079fe55b97c4d3ef6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01138f8d20d65d8ec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06afbff64148963f7",
            "owner_id": "497140136649",
            "tags": {
              "Name": "wenorg-dev-app_vpc",
              "business_divsion": "wenorg",
              "environment": "dev",
              "service": "ecs"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b029aa9e9bf22fee",
            "arn": "arn:aws:ec2:us-west-1:497140136649:elastic-ip/eipalloc-0b029aa9e9bf22fee",
            "domain": "vpc",
            "id": "eipalloc-0b029aa9e9bf22fee",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-8-111-179.us-west-1.compute.amazonaws.com",
            "public_ip": "52.8.111.179",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:497140136649:listener/app/dev-ecs-webpage-cluster-alb/93bc54713a02b86d/bef2c7dd483af116",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:497140136649:targetgroup/dev-ecs-new-frgt-TG/377331a4ddb60e43",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:497140136649:listener/app/dev-ecs-webpage-cluster-alb/93bc54713a02b86d/bef2c7dd483af116",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:497140136649:loadbalancer/app/dev-ecs-webpage-cluster-alb/93bc54713a02b86d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.ecs-fargate-TG",
            "data.aws_lb.cluster_lb",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs-fargate-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:497140136649:targetgroup/dev-ecs-new-frgt-TG/377331a4ddb60e43",
            "arn_suffix": "targetgroup/dev-ecs-new-frgt-TG/377331a4ddb60e43",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:497140136649:targetgroup/dev-ecs-new-frgt-TG/377331a4ddb60e43",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-ecs-new-frgt-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01138f8d20d65d8ec"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rtb-private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cb55dd32de62ce5e",
            "id": "r-rtb-05572b60ea1ddcac01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05572b60ea1ddcac0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.rtb-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:497140136649:route-table/rtb-05572b60ea1ddcac0",
            "id": "rtb-05572b60ea1ddcac0",
            "owner_id": "497140136649",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01138f8d20d65d8ec"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}